# gblp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  MipMappedSize.h  blp.cc  blp.h  openglblp.cc  openglblp.h  vcpkg.json
gtk/: gblp-app-menu.ui  gblp-app-window.cc  gblp-app-window.h  gblp-app-window.ui  gblp.c  gblp.gresource.xml
palbmp/: colorconv.c  colorconv.h  memutil.h  minmax.h  palcreate.c  palcreate.h  palettize.c  palettize.h  paloptimize.c  paloptimize.h  utypes.h
